# api/internal/presenter/controller/system/response.go
@@ -1,0 +1,5 @@
+package system
+
+type Response struct {
+	Status string `json:"status.omitempty"`
+}
