# docs/swagger.json
@@ -24,7 +24,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/system.Response"
                         }
                     }
                 }
@@ -140,6 +140,16 @@
                             "type": "object"
                         }
                     }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "system.Response": {
+            "type": "object",
+            "properties": {
+                "status.omitempty": {
+                    "type": "string"
                 }
             }
         }
